packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/valid/with_single_import.mmd
---
title: Song with Single Import
tempo: 120
---

@import "device_libraries/test_device_a.mmd"

# Use imported aliases

[00:00.000]
- device_a_init 1

[00:01.000]
- device_a_preset 1 5

[00:02.000]
- device_a_volume 1 75
