packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/invalid/imports/missing_import.mmd
---
title: Import Missing File
---

# This file doesn't exist!
@import "nonexistent_device.mmd"

[00:00.000]
- pc 1.0
